--- a/.gitignore/.gitignore
+++ b/.gitignore/.gitignore
@@ -3,7 +3,7 @@ Unity generated
 ===============
 Temp/
 Library/
-.meta
+*.meta
 
 =====================================
 Visual Studio / MonoDevelop generated
