--- a/.gitignore/.gitignore
+++ b/.gitignore/.gitignore
@@ -30,3 +30,6 @@ OS generated
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# Asset meta data should only be ignored when the corresponding asset is also ignored
+!/[Aa]ssets/**/*.meta
